--- a/jc-club-subject/pom.xml
+++ b/jc-club-subject/pom.xml
@@ -10,6 +10,15 @@
     <description>鸡翅club-题目领域服务</description>
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
+
     <modules>
         <module>jc-club-subject-api</module>
         <module>jc-club-application</module>
