--- a/jc-club-subject/jc-club-application/pom.xml
+++ b/jc-club-subject/jc-club-application/pom.xml
@@ -17,5 +17,13 @@
         <module>jc-club-application-job</module>
     </modules>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
 
 </project>
