--- a/jc-club-auth/jc-club-auth-starter/src/main/resources/bootstrap.yml
+++ b/jc-club-auth/jc-club-auth-starter/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: jc-club-oss
+    name: jc-club-auth
   profiles:
     active: dev
   cloud:
@@ -12,6 +12,5 @@ spring:
         namespace:
         file-extension: yaml
       discovery:
-        enabled: true
         server-addr: 192.168.242.128:8848
-
+        enabled: true
