--- a/jc-club-subject/jc-club-starter/src/main/resources/bootstrap.yml
+++ b/jc-club-subject/jc-club-starter/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: jc-club-oss
+    name: jc-club-subject
   profiles:
     active: dev
   cloud:
@@ -14,4 +14,3 @@ spring:
       discovery:
         enabled: true
         server-addr: 192.168.242.128:8848
-
